Use bullet points instead of asterisk in the save password bubble.

Bug: 774516
Change-Id: I17344d16d835a9db9daf1c87824ea9e40ec38baa
Reviewed-on: https://chromium-review.googlesource.com/721544
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Tatiana Gornak <melandory@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509366}
Former-commit-id: 1009ba6f6347fe74b77a1bc0cbec33b36e19cb6b